fixed missing borders in mobile mail detail view styles

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -974,7 +974,7 @@ textarea.inplace-editor {
 
         .contact-picture { display: none; }
 
-        &.expanded .detail-view-header { border:0; }
+        //&.expanded .detail-view-header { border:0; }
 
         .detail-view-header {
             padding: 0 0 @default-padding 0;
@@ -1013,7 +1013,7 @@ textarea.inplace-editor {
 
         &.expanded section.attachments:empty { border: 0; }
 
-        .attachments { border-bottom-width: 0; }
+        //.attachments { border-bottom-width: 0; }
 
         .has-attachments { display: none; }
 
